# CmakeCudaTemplate

./: CMakeLists.txt
dependency/: CMakeLists.txt
dependency/Cuda/: CMakeLists.txt
dependency/Cuda/include/: hellow_GPU.h
dependency/Cuda/src/: hellow_GPU.cu
dependency/MyLib/: CMakeLists.txt
dependency/MyLib/include/: hellow.h
dependency/MyLib/src/: hellow.cpp
src/: main.cpp
